force-app/main/objects/User.object
<CustomObject>
    <fields>
        <fullName>Allow_C_B_Price_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow C&amp;B Price Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approve_CB_Discounts__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if this user has rights to approve C&amp;B discounts</inlineHelpText>
        <label>Approve C&amp;B Discounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approve_TE_Discounts__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if this user has rights to approve T&amp;E discounts</inlineHelpText>
        <label>Approve T&amp;E Discounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Teams__c</fullName>
        <label>Case Teams</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AM APAC Technical Support</fullName>
                    <isActive>false</isActive>
                    <label>AM APAC Technical Support</label>
                </value>
                <value>
                    <fullName>AM China Technical Support</fullName>
                    <isActive>false</isActive>
                    <label>AM China Technical Support</label>
                </value>
                <value>
                    <fullName>AM EMEA Technical Support</fullName>
                    <isActive>false</isActive>
                    <label>AM EMEA Technical Support</label>
                </value>
                <value>
                    <fullName>AM India Customer Success</fullName>
                    <isActive>false</isActive>
                    <label>AM India Customer Success</label>
                </value>
                <value>
                    <fullName>AM US Technical Support</fullName>
                    <isActive>false</isActive>
                    <label>AM US Technical Support</label>
                </value>
                <value>
                    <fullName>APAC Customer Experience</fullName>
                </value>
                <value>
                    <fullName>APAC Customer Success</fullName>
                    <isActive>false</isActive>
                    <label>APAC Customer Success</label>
                </value>
                <value>
                    <fullName>APAC Technical Support</fullName>
                </value>
                <value>
                    <fullName>China Customer Experience</fullName>
                </value>
                <value>
                    <fullName>China Customer Success</fullName>
                    <isActive>false</isActive>
                    <label>China Customer Success</label>
                </value>
                <value>
                    <fullName>China Technical Support</fullName>
                </value>
                <value>
                    <fullName>CPS</fullName>
                </value>
                <value>
                    <fullName>CSIT</fullName>
                </value>
                <value>
                    <fullName>EMEA Customer Experience</fullName>
                </value>
                <value>
                    <fullName>EMEA Customer Success</fullName>
                    <isActive>false</isActive>
                    <label>EMEA Customer Success</label>
                </value>
                <value>
                    <fullName>EMEA Technical Support</fullName>
                </value>
                <value>
                    <fullName>GCSC Operations</fullName>
                </value>
                <value>
                    <fullName>India Chat</fullName>
                    <isActive>false</isActive>
                    <label>India Chat</label>
                </value>
                <value>
                    <fullName>India Customer Experience</fullName>
                </value>
                <value>
                    <fullName>AM India Technical Support</fullName>
                    <label>India Technical Support</label>
                </value>
                <value>
                    <fullName>LPS</fullName>
                </value>
                <value>
                    <fullName>Managed Services</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>US Customer Experience</fullName>
                </value>
                <value>
                    <fullName>US Customer Success</fullName>
                    <isActive>false</isActive>
                    <label>US Customer Success</label>
                </value>
                <value>
                    <fullName>US Technical Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_BU__c</fullName>
        <label>Company BU</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Abu Dhabi - AD1</fullName>
                </value>
                <value>
                    <fullName>AP Region - P10</fullName>
                </value>
                <value>
                    <fullName>Australia - AU1</fullName>
                </value>
                <value>
                    <fullName>Belgium - BE1</fullName>
                </value>
                <value>
                    <fullName>Belgium SPS - BE5</fullName>
                </value>
                <value>
                    <fullName>Canada - CA1</fullName>
                </value>
                <value>
                    <fullName>China - CN1</fullName>
                </value>
                <value>
                    <fullName>Denmark - DK1</fullName>
                </value>
                <value>
                    <fullName>Denmark SPS - DK5</fullName>
                </value>
                <value>
                    <fullName>EU Region - E50</fullName>
                </value>
                <value>
                    <fullName>Finland - FI1</fullName>
                </value>
                <value>
                    <fullName>France - FR1</fullName>
                </value>
                <value>
                    <fullName>France SPS - FR5</fullName>
                </value>
                <value>
                    <fullName>Germany - DE1</fullName>
                </value>
                <value>
                    <fullName>Germany SPS - DE5</fullName>
                </value>
                <value>
                    <fullName>Hong Kong - HK1</fullName>
                </value>
                <value>
                    <fullName>India - IN1</fullName>
                </value>
                <value>
                    <fullName>Ireland - IE1</fullName>
                </value>
                <value>
                    <fullName>Italy - IT1</fullName>
                </value>
                <value>
                    <fullName>Middle East - ME1</fullName>
                </value>
                <value>
                    <fullName>Netherlands - NL1</fullName>
                </value>
                <value>
                    <fullName>Netherlands SPS - NL5</fullName>
                </value>
                <value>
                    <fullName>New Zealand - NZ1</fullName>
                </value>
                <value>
                    <fullName>Norway - NO1</fullName>
                </value>
                <value>
                    <fullName>Poland - PL1</fullName>
                </value>
                <value>
                    <fullName>Saudi Arabia - SA5</fullName>
                </value>
                <value>
                    <fullName>Singapore - SG1</fullName>
                </value>
                <value>
                    <fullName>South Africa - ZA1</fullName>
                </value>
                <value>
                    <fullName>Spain - ES1</fullName>
                </value>
                <value>
                    <fullName>Sweden - SE1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Bureau_Service_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to identify the Bureau Service Job Manager</description>
        <label>Is Managed Services Standard Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_CPS_Project_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is CPS Project Manager?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_I_O_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is I/O Lead?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Job_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Job Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Localisation_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Localisation Lead?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Managed_Service_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to identify Managed Service Job Project Manager</description>
        <label>Is Managed Service Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Project_Co_ordinator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Project Co-ordinator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Project_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Project Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Technology_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Technology Lead?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MS_LOB__c</fullName>
        <description>This field defines the MS Team user belongs to &amp; controls the names appearing in Project Manager lookup on Job</description>
        <label>MS LOB</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TA - Corporate</fullName>
                </value>
                <value>
                    <fullName>TA - Credentialing</fullName>
                </value>
                <value>
                    <fullName>Talent Management</fullName>
                </value>
                <value>
                    <fullName>Talent Management (Dashboards)</fullName>
                </value>
                <value>
                    <fullName>TA - Vocational (Analytics)</fullName>
                </value>
                <value>
                    <fullName>TA - Vocational (Batch)</fullName>
                </value>
                <value>
                    <fullName>TA - Vocational (School)</fullName>
                </value>
                <value>
                    <fullName>TA - Corporate &amp; TA - Credentialing</fullName>
                </value>
                <value>
                    <fullName>TA - Corporate &amp; Talent Management</fullName>
                </value>
                <value>
                    <fullName>TA - Vocational (Analytics) &amp; Talent Management</fullName>
                </value>
                <value>
                    <fullName>TA - Vocational (Batch) &amp; Talent Management</fullName>
                </value>
                <value>
                    <fullName>TA - Vocational (School) &amp; Talent Management</fullName>
                </value>
                <value>
                    <fullName>TA - Vocational (Analytics) &amp; TA - Corporate</fullName>
                </value>
                <value>
                    <fullName>TA - Vocational (Batch) &amp; TA - Corporate</fullName>
                </value>
                <value>
                    <fullName>TA - Vocational (School) &amp; TA - Corporate</fullName>
                </value>
                <value>
                    <fullName>TA - Corporate, TA - Credentialing, Talent Management, TA - Vocational (Batch) &amp; TA - Vocational (School)</fullName>
                </value>
                <value>
                    <fullName>TA - Vocational (Batch), TA - Vocational (School) &amp; TA - Vocational (Analytics)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PSA_Role__c</fullName>
        <description>This specifies the role that the user should be assigned as per the PSA Securit y Model.</description>
        <inlineHelpText>Specify the role that the user should be assigned as per the PSA Securit y Model.</inlineHelpText>
        <label>PSA Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Project Manager</fullName>
                </value>
                <value>
                    <fullName>PSA Lead</fullName>
                    <default>true</default>
                    <label>PSA Lead</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_BU__c</fullName>
        <label>Project BU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Superuser_BU__c</fullName>
        <description>Selected BU comma seperated for which user is a super user</description>
        <label>Superuser BU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Rate_Cost__c</fullName>
        <label>Time Rate Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Utilisation_Function__c</fullName>
        <label>Utilisation Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Admin</fullName>
                </value>
                <value>
                    <fullName>PS</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>SPS</fullName>
                </value>
                <value>
                    <fullName>TS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>